--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-REACT_APP_RAPIDAPI_KEY =  'f0021db587msh781fb1cbef39856p11c183jsn45521d5d1c85'
+REACT_APP_RAPIDAPI_KEY =  '4370470604msh3f176b397b35c82p17a945jsne17851935936'
 REACT_APP_CRYPTO_API_URL = 'https://coinranking1.p.rapidapi.com'
 REACT_APP_NEWS_API_URL = 'https://bing-news-search1.p.rapidapi.com'
 REACT_APP_NEWS_RAPIDAPI_HOST = 'bing-news-search1.p.rapidapi.com'
  REACT_APP_CRYPTO_RAPIDAPI_HOST ='coinranking1.p.rapidapi.com'
 
 ESLINT_NO_DEV_ERRORS=true
+SKIP_PREFLIGHT_CHECK=true
